gccida/g1/apply_delayed_renames
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_delayed_renames/src/ssa.c:1256:39: error: use of undeclared identifier 'machine_mode'
new_renames->new_reg = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)old_reg + 2)); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_delayed_renames/src/obj/ssa.o] Error 1
